# LearnSDL2

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: 01_hello_SDL.cpp  CMakeLists.txt
